--- a/src/devlink/Footer.module.css
+++ b/src/devlink/Footer.module.css
@@ -4,6 +4,14 @@
   padding-bottom: 96px;
 }
 
+@media screen and (max-width: 991px) {
+  .section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .section {
     padding: 60px 15px;
@@ -67,8 +75,15 @@
 
 @media screen and (max-width: 991px) {
   .footer-top-wrapper {
+    display: grid;
+    padding-right: 0px;
+    justify-items: stretch;
+    align-items: start;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 8vw;
     grid-row-gap: 4rem;
     grid-template-columns: 1fr;
+    grid-template-rows: auto;
   }
 }
 
@@ -81,6 +96,7 @@
 @media screen and (max-width: 479px) {
   .footer-top-wrapper {
     grid-row-gap: 48px;
+    grid-template-rows: auto;
   }
 }
 
@@ -89,6 +105,18 @@
   max-width: 32rem;
   flex-direction: column;
   align-items: flex-start;
+}
+
+@media screen and (max-width: 479px) {
+  .footer-left-wrapper {
+    display: block;
+    padding-right: 0px;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+  }
 }
 
 .logo-link {
@@ -103,8 +131,8 @@
 }
 
 .image-4 {
-  margin: -110px -30px;
-  padding: 13px 0px;
+  margin: 0px -7px;
+  padding: 0px;
 }
 
 .text-medium {
@@ -112,6 +140,12 @@
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: normal;
+}
+
+@media screen and (max-width: 479px) {
+  .text-medium {
+    display: inline-block;
+  }
 }
 
 .footer-form-blog {
@@ -276,8 +310,14 @@
 
 @media screen and (max-width: 479px) {
   .footer-menu-wrapper {
-    grid-row-gap: 2.5rem;
+    display: grid;
+    padding-right: 0px;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 1.5rem;
+    grid-row-gap: 2.3rem;
+    grid-template-areas: "Area";
     grid-template-columns: 1fr;
+    grid-template-rows: auto;
   }
 }
 
@@ -293,37 +333,29 @@
   text-align: left;
 }
 
+@media screen and (max-width: 991px) {
+  .footer-link-list {
+    margin-left: 100px;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .footer-link-list {
+    margin-right: 99px;
+    padding-right: 0px;
+    padding-left: 0px;
+    text-align: left;
+  }
+}
+
 .footer-link-list-heading {
   margin-bottom: 1rem;
   color: var(--white-d45e5cda);
   font-size: 0.875rem;
   font-weight: 600;
   letter-spacing: normal;
-}
-
-.footer-link {
-  display: flex;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  flex-wrap: nowrap;
-  align-items: center;
-  grid-column-gap: 8px;
-
-  transition: all 300ms ease;
-
-  color: hsla(0, 0.00%, 100.00%, 0.70);
-  font-weight: 400;
-  text-decoration: none;
-}
-
-.footer-link:hover {
-  color: var(--white-d45e5cda);
-}
-
-@media screen and (max-width: 767px) {
-  .footer-link:hover {
-    color: #667085;
-  }
 }
 
 .footer-social-link {
@@ -358,6 +390,31 @@
   color: hsla(0, 0.00%, 100.00%, 1.00);
 }
 
+.footer-link {
+  display: flex;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  flex-wrap: nowrap;
+  align-items: center;
+  grid-column-gap: 8px;
+
+  transition: all 300ms ease;
+
+  color: hsla(0, 0.00%, 100.00%, 0.70);
+  font-weight: 400;
+  text-decoration: none;
+}
+
+.footer-link:hover {
+  color: var(--white-d45e5cda);
+}
+
+@media screen and (max-width: 767px) {
+  .footer-link:hover {
+    color: #667085;
+  }
+}
+
 .footer-bottom-wrapper {
   display: flex;
   margin-top: 4rem;
@@ -374,6 +431,10 @@
     flex-direction: column-reverse;
     align-items: flex-start;
   }
+}
+
+.text-color-blue {
+  color: hsla(203, 100.00%, 56.67%, 0.70);
 }
 
 .footer-legal-list {
@@ -409,5 +470,57 @@
 @media screen and (max-width: 767px) {
   .footer-legal-link:hover {
     color: hsla(217.77777777777777, 15.08%, 64.90%, 1.00);
+  }
+}
+
+@media screen and (max-width: 991px) {
+  #w-node-_9fa3a9c4-87d4-19b0-95f7-1b0b099f82a3-099f82a0 {
+    justify-self: center;
+  }
+  #w-node-_9fa3a9c4-87d4-19b0-95f7-1b0b099f82b7-099f82a0 {
+    justify-self: auto;
+  }
+  #w-node-_9fa3a9c4-87d4-19b0-95f7-1b0b099f82e5-099f82a0 {
+  }
+}
+@media screen and (max-width: 479px) {
+  #w-node-_9fa3a9c4-87d4-19b0-95f7-1b0b099f82a3-099f82a0 {
+    justify-self: center;
+    grid-row-start: span 1;
+    grid-row-end: span 1;
+    grid-column-start: span 1;
+    grid-column-end: span 1;
+  }
+  #email.w-node-_9fa3a9c4-87d4-19b0-95f7-1b0b099f82aa-099f82a0 {
+    grid-row-start: span 1;
+    grid-row-end: span 1;
+    grid-column-start: span 1;
+    grid-column-end: span 1;
+  }
+  #w-node-_9fa3a9c4-87d4-19b0-95f7-1b0b099f82ab-099f82a0 {
+    grid-row-start: span 1;
+    grid-row-end: span 1;
+    grid-column-start: span 1;
+    grid-column-end: span 1;
+  }
+  #w-node-_9fa3a9c4-87d4-19b0-95f7-1b0b099f82b7-099f82a0 {
+    justify-self: auto;
+    grid-row-start: span 1;
+    grid-row-end: span 1;
+    grid-column-start: span 1;
+    grid-column-end: span 1;
+  }
+  #w-node-_9fa3a9c4-87d4-19b0-95f7-1b0b099f82e5-099f82a0 {
+    grid-column-start: span 1;
+    grid-column-end: span 1;
+    grid-row-start: span 1;
+    grid-row-end: span 1;
+    justify-self: center;
+  }
+  #w-node-_9fa3a9c4-87d4-19b0-95f7-1b0b099f82d0-099f82a0 {
+    grid-row-start: span 1;
+    grid-row-end: span 1;
+    grid-column-start: span 1;
+    grid-column-end: span 1;
   }
 }
